Fixed cropped content

--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,8 @@ i {
 main {
 	/* Imitate window config */
 	position: fixed;
-	top: 20px;
-	bottom: 20px;
+	top: 0;
+	height: 100vh;
 	left: 20px;
 	color: #c6c6c6;
 	display: flex;
@@ -50,6 +50,7 @@ main {
 	overflow-y: auto;
 	overflow-x: hidden;
 	height: 100%;
+	padding: 20px 0;
 	filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.7));
 
 	/* Hide scrollbar */
